crates/strider-analyze/tests/snapshots/v3__mips64be__complex__bit_test_zero.snap
---
source: crates/strider/tests/v3_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x120000ec8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "5" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "9" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "10" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "5" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "5" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "11" -> "10" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "11" [label="const 0x2a:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "v12" [label="Post Call\nv1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v12" [color="#888888", style=dashed];
  "v12" -> "10" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "v13" [label="Post Call\nf0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v13" [color="#888888", style=dashed];
  "v13" -> "10" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "v14" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v14" [color="#888888", style=dashed];
  "v14" -> "10" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "8" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "15" -> "8" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "16" -> "8" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "16" [label="const 0xffffffffffffffe0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "15" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "17" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v18" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v18" -> "6" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "19" -> "6" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "17" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "20" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v21" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v21" -> "17" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "22" -> "17" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "22" [label="init\nra", shape=Mdiamond, fillcolor="#1a3a5c"];
  "20" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "23" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v24" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v24" -> "20" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "25" -> "20" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "25" [label="init\ngp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "23" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "26" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "26" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" -> "26" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "27" [label="const 0x120000ec0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "26" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "28" -> "26" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "29" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "26" -> "29" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "26" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "30" -> "29" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "30" [label="const 0x11:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "v31" [label="Post Call\nv1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "26" -> "v31" [color="#888888", style=dashed];
  "v31" -> "29" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "v32" [label="Post Call\nf0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "26" -> "v32" [color="#888888", style=dashed];
  "v32" -> "29" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "v33" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "26" -> "v33" [color="#888888", style=dashed];
  "v33" -> "29" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "4" [label="Equal\nu64 → bool", shape=box, fillcolor="#2d2d2d"];
  "34" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "35" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "35" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "34" [label="And:u64", shape=box, fillcolor="#2d2d2d"];
  "36" -> "34" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "37" -> "34" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "37" [label="const 0x4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "36" [label="arg[0] ← a0", shape=Mdiamond, fillcolor="#1a3a5c"];
}
