crates/strider-analyze/tests/snapshots/v3__mips64be__complex__multi_arg_call_in_branch.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x120000ed8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "5" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "11" -> "5" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "12" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "5" -> "12" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "5" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "13" -> "12" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "v14" [label="Post Call\nv1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v14" [color="#888888", style=dashed];
  "v14" -> "12" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "v15" [label="Post Call\nf0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v15" [color="#888888", style=dashed];
  "v15" -> "12" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "v16" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v16" [color="#888888", style=dashed];
  "v16" -> "12" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "13" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "17" -> "13" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "17" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "18" -> "17" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "19" -> "17" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "18" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v20" [label="Post Call\nv0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v20" [color="#888888", style=dashed];
  "v20" -> "18" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "11" [label="init\nra", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="init\na3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="init\na2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="init\na1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "21" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "21" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "22" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v23" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v23" -> "21" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "11" -> "21" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "22" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "24" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v25" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v25" -> "22" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "26" -> "22" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "26" [label="init\ngp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "24" [label="MemPartition[MemPartitionId(0)]", shape=trapezium, fillcolor="#3a1a4a"];
  "27" -> "24" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "28" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "28" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "29" -> "28" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "30" -> "28" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "30" [label="const 0x120000ed8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "10" -> "28" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "28" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "8" -> "28" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "10" -> "28" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "11" -> "28" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "31" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "28" -> "31" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "28" -> "31" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "32" -> "31" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "v33" [label="Post Call\nv1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "28" -> "v33" [color="#888888", style=dashed];
  "v33" -> "31" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "v34" [label="Post Call\nf0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "28" -> "v34" [color="#888888", style=dashed];
  "v34" -> "31" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "v35" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "28" -> "v35" [color="#888888", style=dashed];
  "v35" -> "31" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "32" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "36" -> "32" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "36" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "37" -> "36" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "38" -> "36" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "38" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "37" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v39" [label="Post Call\nv0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "28" -> "v39" [color="#888888", style=dashed];
  "v39" -> "37" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "29" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "21" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "4" [label="Equal\nu64 → bool", shape=box, fillcolor="#2d2d2d"];
  "40" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "41" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "41" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "40" [label="init\na0", shape=Mdiamond, fillcolor="#1a3a5c"];
}
